[workspace]
resolver = "2"

members = ["page_table_multiarch", "page_table_entry"]

[workspace.package]
version = "0.5.8"
edition = "2024"
authors = ["Yuekai Jia <equation618@gmail.com>"]
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
documentation = "https://arceos-org.github.io/page_table_multiarch"
repository = "https://github.com/arceos-org/page_table_multiarch"
keywords = ["arceos", "paging", "page-table", "virtual-memory"]
categories = ["os", "hardware-support", "memory-management", "no-std"]
rust-version = "1.85"

[workspace.dependencies]
memory_addr = "0.4"
page_table_entry = { path = "page_table_entry", version = "0.5" }
