[package]
name = "page_table_entry"
description = "Page table entry definition for various hardware architectures"
documentation = "https://docs.rs/page_table_entry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[features]
arm-el2 = []

[dependencies]
bitflags = "2.6"
memory_addr = "0.4"

[target.'cfg(any(target_arch = "aarch64", doc))'.dependencies]
aarch64-cpu = "10.0"

[target.'cfg(any(target_arch = "x86_64", doc))'.dependencies]
x86_64 = "0.15.2"

[package.metadata.docs.rs]
rustc-args = [ "--cfg" , "doc"]
