[package]
name = "page_table_entry"
description = "Page table entry definition for various hardware architectures"
documentation = "https://docs.rs/page_table_entry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[features]
arm-el2 = []

all = ["dep:aarch64-cpu", "dep:x86_64"]

[dependencies]
bitflags = "2.9"
memory_addr.workspace = true

# Target-specific dependencies
aarch64-cpu = { version = "10.0", optional = true }
x86_64 = { version = "0.15", optional = true }

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "10.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.15"

[package.metadata.docs.rs]
all-features = true
