[package]
name = "page_table_multiarch"
description = "Generic page table structures for various hardware architectures"
documentation = "https://docs.rs/page_table_multiarch"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[features]
default = []
copy-from = ["dep:bitmaps"]

all = ["page_table_entry/all"]

[dependencies]
log = "0.4"
memory_addr.workspace = true
page_table_entry.workspace = true
bitmaps = { version = "3.2", default-features = false, optional = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv = { version = "0.14", default-features = false }

[dev-dependencies]
rand = { version = "0.9.1", default-features = false, features = ["small_rng"] }

[package.metadata.docs.rs]
all-features = true
